cks/scripts/process_secure/ingress/09-process-secure-ingress-vs-vs.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kubemsb
