cks/scripts/process_secure/ingress/01-process-secure-ingress-nginx-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx-web
  template:
    metadata:
      labels:
        app: nginx-web
    spec:
      containers:
      - name: nginx-web
        image: harbor.kubemsb.com/library/nginx-web:0.1
        ports:
        - name: http
          containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-web-svc
spec:
  type: ClusterIP
  selector:
    app: nginx-web
  ports:
  - name: http
    port: 80
    targetPort: 80
