cks/scripts/process_secure/ingress/02-process-secure-ingress-nginx-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-web
  template:
    metadata:
      labels:
        app: django-web
    spec:
      containers:
      - name: django-web
        image: harbor.kubemsb.com/library/django-web:0.1
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-web-svc
spec:
  type: ClusterIP
  selector:
    app: django-web
  ports:
  - name: http
    port: 8000
    targetPort: 8000
