cks/scripts/process_secure/ingress/06-process-secure-ingress-vs-django-web-deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-web-deployment-v2
  namespace: django
spec:
  replicas: 2
  selector:
    matchLabels:
      app: django-web-v2
  template:
    metadata:
      labels:
        app: django-web-v2
    spec:
      containers:
      - name: django-web
        image: harbor.kubemsb.com/library/django-web:0.1
        ports:
        - name: http
          containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: django-web-svc-v2
  namespace: django
spec:
  type: ClusterIP
  selector:
    app: django-web-v2
  ports:
  - name: http
    port: 8000
    targetPort: 8000
