cks/scripts/process_secure/ingress/03-process-secure-ingress-mulrules.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: one-host-mul-uri
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: www.k8slocal.com
    http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service: 
            name: nginx-web-svc
            port:
              number: 80
      - path: /dajongo
        pathType: Prefix
        backend:
          service:
            name: django-web-svc
            port:
              number: 8000
